samples/_failures_safe/1761359738_104637_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2ae175df.c: In function ‘main’:
./samples/SAFE/__tmp_2ae175df.c:179:5: error: expected expression at end of input
  179 |     for (int i = 0; i < token_count; i++)
      |     ^~~
./samples/SAFE/__tmp_2ae175df.c:179:5: error: expected declaration or statement at end of input
